--- a/www/static/css/game2.css
+++ b/www/static/css/game2.css
@@ -9,7 +9,7 @@
     text-align: center;
     margin-top: 20px;
     width: 90%;
-    height: 80vh; 
+    height: 90vh; 
     max-width: 900px; 
     margin: 100px auto 0;
     border-radius: 10px;
@@ -63,7 +63,7 @@
 /* Text box styling */
 .text-box {
     width: 100%;
-    padding: 10px;
+    padding: 4px;
     font-size: 1rem;
     border: 2px solid #ddd;
     color: red;
@@ -84,30 +84,31 @@
     font-style: italic;
 }
 
-
-
 section#quiz2 {
     text-align: center;
-    background: rgba(255, 255, 255, 0.1);
-    padding: 40px;
-    border-radius: 15px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    max-width: 600px;
-    width: 90%;
-    margin: auto;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.05));
+    padding: 50px;
+    border-radius: 20px;
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.25);
+    max-width: 800px; 
+    width: 90%; 
+    margin: 40px auto; 
+    border: 1px solid rgba(255, 0, 0, 0.7); 
+    backdrop-filter: blur(10px);
+    
 }
 
 section#quiz2 h1 {
-    font-size: 2rem;
-    margin-bottom: 20px;
+    font-size: 1.7rem;
     font-weight: bold;
 }
 
 .games-container {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
     align-items: center;
+   
 }
 
 .games-container div {
