--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,9 +2,13 @@
 {% block viewport %}
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 {% endblock %}
+{% block style%}
 {% block title %} Presidential Timeline {% endblock %}
-{% block content %}
+ {% endblock%}
 <link rel="stylesheet" href="static/css/home.css">
+
+{% block content %}
+
 <header>
     <img src="static/img/mountrush.png" alt="Banner Image">
 </header>
