--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,6 +6,8 @@
 {% block title %} Presidential Timeline {% endblock %}
  {% endblock%}
 <link rel="stylesheet" href="static/css/home.css">
+<link rel="stylesheet" href="static/css/styles.css">
+
 
 {% block content %}
 
