--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="static/css/styles.css">  
     <link rel="stylesheet" href="static/css/mediaqueries.css"> 
     <link rel="stylesheet" href="static/css/aboutstyles.css"> 
-
     <link rel="icon" type="image/x-icon" href="../static/img/favicon.ico">
+    <link rel="stylesheet" href="static/css/home.css">
    
 </head>
 
