--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="row-link">
-                <a href="/timeline">Explore Timeline</a>
+                <a href="timeline">Explore Timeline</a>
             </div>
         </div>
         <div class="row game-row">
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="row-link">
-                <a href="/game">Play Game</a>
+                <a href="game">Play Game</a>
             </div>
         </div>
         <div class="row ranking-row">
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="row-link">
-                <a href="/rank">View Rankings</a>
+                <a href="rank">View Rankings</a>
             </div>
         </div>
         <div class="row about-row">
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="row-link">
-                <a href="/about">Learn More</a>
+                <a href="about">Learn More</a>
             </div>
         </div>
     </div>
