--- a/app/templates/ranking.html
+++ b/app/templates/ranking.html
@@ -10,8 +10,8 @@
 <table border="1" class="presidentList">
     <thead>
         <tr>
-            <th>President ID</th>
             <th>Name</th>
+            <th>#Vote</th>
             <th>Score</th>
             <th> Average </th>
         </tr>
@@ -19,8 +19,8 @@
     <tbody>
         {% for president in presidents %}
             <tr>
-                <td>{{ president['presidentID'] }}</td>
                 <td>{{ president['presidentName'] }}</td>
+                <td>{{ president['numVote'] }}</td>
                 <td>{{ president['Score'] | default('No Score', true) }}</td>
                 <td>{{president['AverageScorePerVote']}}</td>
             </tr>
