--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -26,7 +26,7 @@
    
     <nav id="desktop-nav">
         <div class='logo'> 
-            <a href="/">
+            <a href="home">
                 <img src="static/img/MrPresident.png" alt="Mr. President Logo" class="logo-image" style="width: 100px; height: auto; max-height: 100px;">
             </a>    
         </div>
